--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Nov 28 14:21:47 CET 2007 Jim Meyering <meyering@redhat.com>
+
+	* src/virsh.c (vshCloseLogFile): Diagnose close/write failure.
+
 Wed Nov 28 09:00:00 GMT 2007 Richard W.M. Jones <rjones@redhat.com>
 
 	* src/xm_internal.c, src/xm_internal.h: Added support for
