--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Sat Dec  1 10:42:34 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/hash.c: reset error object when releasing connection
+	* src/iptables.c: don't strdup() param passed to strcmp()
+	* src/qemu_driver.c: free TLS directory path in driver shutdown
+	* src/remote_internal.c: don't strdup() params for virRaiseError
+	* src/virsh.c: reset global error object at shutdown. Release
+	connection state during abnormal shutdown
+
 Sat Dec  1 10:22:34 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/qemu_driver.c: Fix off-by-1 buffer NULL termination in
