--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Mon Dec  3 10:32:10 CET 2007 Daniel Veillard <veillard@redhat.com>
+
+	* src/xen_unified.[ch] src/proxy_internal.c src/xen_internal.c
+	  src/xend_internal.c src/xm_internal.c src/xs_internal.c:
+	  cleanup the xen subdriver table, remove the type entry and
+	  always return "Xen" from the unified entry point.
+
 Sat Dec  1 10:42:34 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/hash.c: reset error object when releasing connection
