--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Dec  5 13:55:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* qemud/qemud.c: Re-added listen_tcp & listen_tls config
+	param handling accidentally lost in earlier refactoring
+
 Wed Dec  5 13:51:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* include/libvirt/libvirt.h.in: Add virConnectAuthPtrDefault
