--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Dec  5 14:08:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* python/libvir.c, python/libvir.py: Add binding for the
+	virConnectOpenAuth() API which generator can't handle
+
 Wed Dec  5 13:55:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* qemud/qemud.c: Re-added listen_tcp & listen_tls config
