--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Wed Dec  5 14:09:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* configure.in: automatically disable Xen setuid proxy if
+	PolicyKit is enabled
+	* libvirt.spec.in: force disable of Xen setuid proxy for
+	distros where PolicyKIt is enabled
+
 Wed Dec  5 14:08:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* python/libvir.c, python/libvir.py: Add binding for the
