--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Wed Dec  5 14:16:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* docs/libvir.html: Add page about authentication setup options
+	* docs/libvirt.css: Make <pre> tag show scrollbars if content
+	is too wide to fit
+	* docs/*.html: Re-generated from libvir.html
+
 Wed Dec  5 14:09:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* configure.in: automatically disable Xen setuid proxy if
