--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Dec  5 22:34:27 CET 2007 Jim Meyering <meyering@redhat.com>
+
+	Add all of the files pulled in from gnulib by running ./bootstrap.
+	Adjust some .cvsignore files.
+
 Wed Dec  5 22:30:03 CET 2007 Jim Meyering <meyering@redhat.com>
 
 	Use gnulib, starting with its physmem and getaddrinfo modules.
