--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Dec  6 15:53:41 CET 2007 Daniel Veillard <veillard@redhat.com>
+
+	* docs/*: rebuilt the docs and XML files
+
 Thu Dec  6 15:42:52 CET 2007 Daniel Veillard <veillard@redhat.com>
 
 	* po/*: updated the localization files
