--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Dec  6 10:35:41 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* libvirt.spec.in: Fix macros build on RHEL distros
+
 Thu Dec  6 15:53:41 CET 2007 Daniel Veillard <veillard@redhat.com>
 
 	* docs/*: rebuilt the docs and XML files
