--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Dec  7 09:39:41 CET 2007 Daniel Veillard <veillard@redhat.com>
+
+	* python/generator.py python/libvir.c python/libvirt-python-api.xml:
+	  add a python binding for virNodeGetCellsFreeMemory
+
 Thu Dec  6 12:41:18 CET 2007 Jim Meyering <meyering@redhat.com>
 
 	* qemud/qemud.c (qemudInitPaths): Remove unused code.
