--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Dec  7 10:16:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* configure.in: ensure $prefix is quoted in conditional test
+
 Fri Dec  7 14:55:00 UTC 2007 Richard W.M. Jones <rjones@redhat.com>
 
 	* proxy/Makefile.am: Include gnulib code when building the
