--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jan  8 12:48:00 EST 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/util.c: cast  off_t to int in debug output to avoid warning
+
 Tue Jan  8 11:12:00 EST 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/util.c: Fix addr passed to free() in error cleanup
