Added graceful shutdown support to QEMU/KVM (patch from Guido Guenther)

--- a/AUTHORS
+++ b/AUTHORS
@@ -38,6 +38,7 @@ Patches have also been contributed by:
   Shuveb Hussain       <shuveb@binarykarma.com>
   Jim Paris            <jim@jtan.com>
   Chris Lalancette     <clalance@redhat.com>
+  Guido Guenther       <agx@sigxcpu.org>
 
   [....send patches to get your name here....]
 
